--- a/css/style.css
+++ b/css/style.css
@@ -632,7 +632,11 @@ header li{
     grid-template-columns: 1fr 1fr 1fr;
     border: none;
     margin-right: 0;
+    padding-bottom: 0.5rem;
     margin-bottom: 0.5rem;
+    border-bottom-color: #e7e7e7;
+    border-bottom-width: 0.02rem;
+    border-bottom-style:solid ;
   }
 
   .c_press_metadata div{
