Removed Catherine. Removed "for more info"

--- a/css/style.css
+++ b/css/style.css
@@ -536,7 +536,7 @@ img[alt="twitter logo"]{
 .c_section_team-students{
   margin-top:3.3%;
   display:grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   column-gap: 1%;
 }
 .c_article_team-student{
